vim (2:7.4.2347-1) UNRELEASED; urgency=medium

  [ upstream ]
  * Fix test failure due to relying on modelines.  (Closes: #837130)

 -- James McCoy <jamessan@debian.org>  Thu, 08 Sep 2016 20:34:26 -0400

vim (2:7.4.2330-1) unstable; urgency=medium

  [ upstream ]
  * Highlighted changes:
    + 7.4.1976: Support 64-bit number variables in VimL.  Use has('num64') to
      test for presence of the functionality.  (Closes: #788055)
    + runtime/ftplugin/man.vim:
      - Use the width of the current window when formatting a man page.
        (Closes: #827634)
    + runtime/syntax/rst.vim:
      - Use underline for emphasized text.  (Closes: #547537)
    + runtime/tutor/tutor.es:
      - Fix misspelling of seguido.  (Closes: #834336)

  [ James McCoy ]
  * Switch from Python2 to Python3 language bindings.  All packaged
    addons which use Python support both 2 & 3.  (Closes: #729924)
  * Add mips64el as a recognized architecture in debcontrol files.  Thanks to
    Reiner Herrmann for the patch.  (Closes: #830545)
  * Update supported Ubuntu releases in debsources files.
  * Remove vim-gnome (which uses deprecated gnome2 libraries) in favor of
    vim-gtk3.  (Closes: #820239)
  * Run tests during build targets to avoid test failures related to running
    as (fake)root.

 -- James McCoy <jamessan@debian.org>  Wed, 07 Sep 2016 22:12:11 -0400

vim (2:7.4.1829-1) unstable; urgency=medium

  * Merge upstream tag v7.4.1829
    + 7.4.1713: Force use of X11 backend under Wayland.  (Closes: #819954)
    + 7.4.1802: Improve handling of long lines in quickfix lists.  (Closes:
      #815976)
    + LogiPat plugin's :ELP command renamed to :LPE, so it doesn't shadow :E.
      (Closes: #796075)

 -- James McCoy <jamessan@debian.org>  Mon, 09 May 2016 23:06:14 -0400

vim (2:7.4.1689-3) unstable; urgency=medium

  * helpztags: Fix regression in previous upload where the doc file isn't
    opened, so no tags file is generated.  (Closes: #820313)
