@@ -1,6 +1,9 @@
 /etc/
 /usr/bin/
-/var/lib/vim/addons/
-/usr/share/pixmaps/
-/usr/share/icons/hicolor/scalable/apps/
+/usr/share/applications/
+/usr/share/icons/locolor/16x16/apps/
+/usr/share/icons/locolor/32x32/apps/
 /usr/share/icons/hicolor/48x48/apps/
+/usr/share/icons/hicolor/scalable/apps/
+/usr/share/pixmaps/
+/var/lib/vim/addons/
