@@ -3,6 +3,11 @@ vim (2:7.4.2347-1) UNRELEASED; urgency=medium
   [ upstream ]
   * Fix test failure due to relying on modelines.  (Closes: #837130)
 
+  [ James McCoy ]
+  * Move xxd into its own package.  This allows other packages to express a
+    relationship on xxd itself, rather than vim-common, and also enables
+    turning vim-common into an Arch: all package.
+
  -- James McCoy <jamessan@debian.org>  Thu, 08 Sep 2016 20:34:26 -0400
 
 vim (2:7.4.2330-1) unstable; urgency=medium
